--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,12 +1,26 @@
-/*
-  Специально для тёмной темы при наличии класса,
-  здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 .page.theme_dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --accent-color: #ff0070;
+  --header__description__title__color: #DB00FF;
+  --border-color: #FF0070;
+  --button-color: #FF0070;
+  --link-shadow-color: #ff0070;
+  --link-text-color: #f1b2ce;
+  --page-font-family: "IBM Plex Mono", "monospace";
+  --page-font-size: 18px;
+  --section-title-color: var(--accent-color);
+  --background-color: #000028;
+  --background-image: url(../images/cover-image-dark.png);
+  --title-shadow-color: #ff0070;
+  --text-color: #f1b2ce;
+  --description-color: #000028;
+}
+
+.page.theme_dark .rec_marker {
+  display: block;
+}
+
+@media (prefers-color-scheme: dark) {
+  .rec_marker {
+    display: block;
+  }
 }
