--- a/styles/light.css
+++ b/styles/light.css
@@ -1,12 +1,23 @@
-/*
-  Специально для светлой темы при наличии класса.
-  Здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 .page.theme_light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --header__description__title__color: #FFC2E6;
+  --accent-color: #FF8DCB;
+  --header__description__title__color: #FFC2E6;
+  --border-color: #FF8DCB;
+  --button-color: #353430;
+  --link-shadow-color: #FF0070;
+  --link-text-color: #353430;
+  --page-font-family: "IBM Plex Mono", "monospace";
+  --page-font-size: 18px;
+  --section-title-color: #353430;
+  --background-color: #353430;
+  --background-image: url(../images/cover-image-light.png);
+
+  --text-color: #353430;
+  --description-color: #353430;
 }
+
+.page.theme_light .rec_marker {
+  display: none;
+}
+
+
