--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,4 +1,16 @@
-/*
-  Переменные для вашего проекта
-  и их переопределение под различные устройства
-*/
+:root {
+  --accent-color: #ff0070;
+  --header__description__title__color: #DB00FF;
+  --border-color: #FF0070;
+  --button-color: #FF0070;
+  --link-shadow-color: #ff0070;
+  --link-text-color: #f1b2ce;
+  --page-font-family: "IBM Plex Mono", "monospace";
+  --page-font-size: 18px;
+  --section-title-color: #353430;
+  --background-color: #000028;
+  --background-image: url(../images/cover-image-dark.png);
+  --title-shadow-color: #ff0070;
+  --text-color: #f1b2ce;
+  --description-color: #000028;
+}
