--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,3 @@
-
 .page {
   font-family: var(--page-font-family);
   font-size: var(--page-font-size);
@@ -39,9 +38,8 @@
   margin-inline-start: 10px;
 }
 
-
-.decorated-zone::before, .decorated-zone::after
- {
+.decorated-zone::before,
+.decorated-zone::after {
   width: 25px;
   height: 25px;
   content: "";
@@ -87,7 +85,7 @@
 
 .header__theme-menu-button_active {
   outline: 1px solid var(--border-color);
-  pointer-events:none;
+  pointer-events: none;
 }
 
 .header__theme-menu-button:hover {
@@ -184,10 +182,10 @@
 }
 
 .section__content {
-  display:flex;  
-  flex-direction: column;  
-  gap:10px;   
-}  
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
 
 .section__text {
   font-size: var(--page-font-size);
@@ -241,10 +239,10 @@
 }
 
 .footer {
-  position:relative;
-  display:flex;
-  padding:20px;
-  min-height:100vh;
+  position: relative;
+  display: flex;
+  padding: 20px;
+  min-height: 100vh;
   justify-content: center;
   align-items: center;
 }
@@ -279,11 +277,11 @@
     font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   }
   .header__theme-menu {
-    padding-top:170px;
+    padding-top: 170px;
     place-self: center end;
   }
   .header__theme-menu-list {
-    flex-direction:column;
+    flex-direction: column;
   }
   .header__description {
     padding: 173px 0px 183px 0px;
@@ -299,12 +297,11 @@
     grid-template-columns: 236px 1fr;
   }
 
-
   .main__container__section:nth-child(2) {
     grid-template-columns: 1fr;
   }
 
-  .main__container__section:nth-child(2) .section__title{
+  .main__container__section:nth-child(2) .section__title {
     grid-column: span 1;
   }
 
@@ -330,7 +327,8 @@
     width: 100%;
   }
 
-  .main__container__section:first-child, .main__container__section:nth-child(3) {
+  .main__container__section:first-child,
+  .main__container__section:nth-child(3) {
     grid-template-columns: 1fr;
   }
 
@@ -343,8 +341,4 @@
     display: flex;
     flex-direction: column;
   }
-  
-} 
-
-
-
+}
