--- a/styles/light.css
+++ b/styles/light.css
@@ -9,7 +9,6 @@
 
   --header__description__title__color: #FFC2E6;
   --accent-color: #FF8DCB;
-  --header__description__title__color: #FFC2E6;
   --border-color: #FF8DCB;
   --button-color: #353430;
   --link-shadow-color: #FF0070;
@@ -18,37 +17,34 @@
   --page-font-size: 18px;
   --section-title-color: #353430;
   --background-color: #353430;
-  
-
   --text-color: #353430;
   --description-color: #353430;
+  --background-image: url(../images/cover-image-light.png);
 }
 
 @media (prefers-color-scheme: light) {
   :root {
     background-image: url(../images/cover-image-light.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-  font-family: var(--page-font-family);
-  color: #353430;
-  font-size: var(--page-font-size);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    font-family: var(--page-font-family);
+    color: #353430;
+    font-size: var(--page-font-size);
 
-  --header__description__title__color: #FFC2E6;
-  --accent-color: #FF8DCB;
-  --header__description__title__color: #FFC2E6;
-  --border-color: #FF8DCB;
-  --button-color: #353430;
-  --link-shadow-color: #FF0070;
-  --link-text-color: #353430;
-  --page-font-family: "IBM Plex Mono", "monospace";
-  --page-font-size: 18px;
-  --section-title-color: #353430;
-  --background-color: #353430;
-  
-
-  --text-color: #353430;
-  --description-color: #353430;
+    --header__description__title__color: #FFC2E6;
+    --accent-color: #FF8DCB;
+    --border-color: #FF8DCB;
+    --button-color: #353430;
+    --link-shadow-color: #FF0070;
+    --link-text-color: #353430;
+    --page-font-family: "IBM Plex Mono", "monospace";
+    --page-font-size: 18px;
+    --section-title-color: #353430;
+    --background-color: #353430;
+    --text-color: #353430;
+    --description-color: #353430;
+    --background-image: url(../images/cover-image-light.png);
   }
 
   .page.theme_light .rec_marker {
