--- a/styles/style.css
+++ b/styles/style.css
@@ -273,7 +273,7 @@
   outline: 1px solid var(--link-text-color);
 }
 
-@media (768 <= width < 1024) {
+@media (768px <= width < 1024px) {
   .header__description__title {
     font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   }
@@ -311,7 +311,10 @@
   }
 }
 
-@media (width < 768) {
+@media (width < 768px) {
+  .header__theme-menu-list {
+    flex-direction: column;
+  }
   .header__description {
     padding: 65px 0px;
     gap: 55px;
