--- a/styles/dark.css
+++ b/styles/dark.css
@@ -12,31 +12,12 @@
   --background-image: url(../images/cover-image-dark.png);
   --text-color: #f1b2ce;
   --description-color: #000028;
+
+  background-image: url(../images/cover-image-dark.png);
 }
 
 .page.theme_dark .rec_marker {
   display: block;
 }
 
-@media (prefers-color-scheme: dark) {
 
-  :root {
-    --accent-color: #ff0070;
-  --header__description__title__color: #DB00FF;
-  --border-color: #FF0070;
-  --button-color: #FF0070;
-  --link-shadow-color: #ff0070;
-  --link-text-color: #f1b2ce;
-  --page-font-family: "IBM Plex Mono", "monospace";
-  --page-font-size: 18px;
-  --section-title-color: var(--accent-color);
-  --background-color: #000028;
-  --background-image: url(../images/cover-image-dark.png);
-  --text-color: #f1b2ce;
-  --description-color: #000028;
-  }
-
-  .rec_marker {
-    display: block;
-  }
-}
