--- a/styles/style.css
+++ b/styles/style.css
@@ -15,8 +15,9 @@
   display: grid;
   grid-template-rows: 1fr auto;
   position: relative;
-  min-height: 100vh;
-  padding: clamp(10px, 0.0286rem + 2.5445vw, 20px);
+  height: 100vh;
+  min-height: 668px;
+  padding-top: 20px;
 }
 
 .rec_marker {
@@ -274,6 +275,9 @@
 }
 
 @media (768px <= width < 1024px) {
+  .header {
+    padding: 20px;
+  }
   .header__description__title {
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
@@ -312,6 +316,9 @@
 }
 
 @media (width < 768px) {
+  .header {
+    padding: 10px;
+  }
   .header__theme-menu-list {
     flex-direction: column;
   }
