--- a/styles/style.css
+++ b/styles/style.css
@@ -162,7 +162,7 @@
 
 .main__container__section:nth-child(2) .section__title {
   grid-column: span 3;
-  min-width: 30%;
+  width: 30%;
 }
 
 .main__container__section:nth-child(3) {
@@ -202,6 +202,7 @@
   display: grid;
   width: 100%;
   gap: 20px;
+  margin-top: -20px;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: auto auto auto auto;
   grid-template-areas:
