--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,361 @@
-/* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
-
 .page {
-  /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+  font-family: var(--page-font-family);
+  font-size: var(--page-font-size);
+  color: var(--text-color);
+
+  background-color: var(--background-color);
+  background-image: var(--background-image);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+.header {
+  display: grid;
+  grid-template-rows: 1fr auto;
+  position: relative;
+  height: 100vh;
+  min-height: 668px;
+  padding-top: 20px;
+  padding-right: 20px;
+}
+
+.rec_marker {
+  position: absolute;
+  color: var(--border-color);
+  text-transform: uppercase;
+  top: 20px;
+  right: 27px;
+}
+
+.rec_marker::after {
+  width: 12px;
+  height: 12px;
+  content: "";
+  display: inline-block;
+  background-color: var(--border-color);
+  box-shadow: 0 0 5px var(--border-color);
+  border-radius: 50%;
+  margin-inline-start: 10px;
+}
+
+.decorated-zone::before,
+.decorated-zone::after {
+  width: 25px;
+  height: 25px;
+  content: "";
+  position: absolute;
+}
+
+.decorated-zone::before {
+  border-right: 1px solid var(--border-color);
+  border-top: 1px solid var(--border-color);
+  top: 20px;
+  right: 20px;
+}
+
+.decorated-zone::after {
+  border-left: 1px solid var(--border-color);
+  border-bottom: 1px solid var(--border-color);
+  bottom: 20px;
+  left: 20px;
+}
+
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 10px;
+}
+
+.header__theme-menu-button {
+  background-color: transparent;
+  font-size: var(--page-font-size);
+  line-height: 18px;
+  padding: 0 13px;
+  width: 70px;
+  height: 26px;
+  cursor: pointer;
+  color: var(--button-color);
+  border: 0;
+  text-transform: lowercase;
+}
+
+.header__theme-menu-button:focus {
+  outline: none;
+}
+
+.header__theme-menu-button_active {
+  outline: 1px solid var(--border-color);
+  pointer-events: none;
+}
+
+.header__theme-menu-button:hover {
+  outline: 1px solid var(--border-color);
+}
+
+.header__theme-menu-button:focus-visible {
+  border-block-end: 1px solid var(--border-color);
+}
+
+.header__description {
+  padding: 273px 0px 134px 0px;
+  flex-direction: column;
+  display: flex;
+  gap: 114px;
+}
+
+.header__description__title {
+  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  text-shadow: 4px 4px 0 var(--title-shadow-color);
+  line-height: 82.5%;
+  color: var(--header__description__title__color);
+  font-weight: 700;
+}
+
+.header__description__text {
+  display: flex;
+  margin: auto 0;
+  line-height: 23.4px;
+  width: clamp(355px, 50%, 491px);
+  align-self: flex-end;
+}
+
+.main__title {
+  justify-content: end;
+  font-weight: 700;
+  background-color: var(--border-color);
+  background-size: cover;
+  font-size: var(--page-font-size);
+  color: var(--description-color);
+}
+
+.main__container {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  padding: 60px 20px 80px 20px;
+  gap: 80px;
+}
+
+.main__container__section {
+  display: grid;
+  gap: 20px;
+}
+
+.main__container__section:first-child {
+  grid-template-columns: 315px 1fr;
+  row-gap: 20px;
+}
+
+.main__container__section:first-child .section__title {
+  grid-row: span 2;
+}
+
+.main__container__section:nth-child(2) {
+  column-gap: 20px;
+  row-gap: 20px;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto auto;
+}
+
+.main__container__section:nth-child(2) .section__title {
+  grid-column: span 3;
+  width: 30%;
+}
+
+.main__container__section:nth-child(3) {
+  grid-template-columns: 315px 1fr;
+}
+
+.section__subtitle {
+  margin-top: 20px;
+  line-height: 23.4px;
+  font-weight: 400;
+  font-size: var(--page-font-size);
+  color: var(--description-color);
+  background-color: var(--accent-color);
+}
+
+.section__title {
+  font-size: 18px;
+  font-weight: 700;
+  color: var(--section-title-color);
+}
+
+.section__content {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.section-header {
+  row-gap: 15px;
+}
+
+.section__text {
+  font-size: var(--page-font-size);
+  font-family: var(--page-font-family);
+  font-weight: 400;
+  line-height: 23.4px;
+  color: var(--text-color);
+}
+
+.main__img__section {
+  display: grid;
+  width: 100%;
+  gap: 20px;
+  margin-top: -20px;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto auto auto auto;
+  grid-template-areas:
+    "title title title"
+    "sunset sunset ice-cream"
+    "tape books ice-cream"
+    "tape street street";
+}
+
+.main__img__section:last-child .main__title {
+  grid-area: title;
+}
+
+.img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.img__sunset {
+  grid-area: sunset;
+}
+
+.img__ice-cream {
+  grid-area: ice-cream;
+}
+
+.img__tape {
+  grid-area: tape;
+}
+
+.img__books {
+  grid-area: books;
+}
+
+.img__street {
+  grid-area: street;
+}
+
+.footer {
+  position: relative;
+  display: flex;
+  padding: 20px;
+  min-height: 100vh;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-title {
+  font-size: clamp(7.5rem, 0.75rem + 14.0625vw, 9.75rem);
+  color: var(--header__description__title__color);
+  text-shadow: 4px 4px 0px var(--link-shadow-color);
+  font-weight: 700;
+  line-height: 82.5%;
+}
+
+.link__p {
+  text-decoration: none;
+  text-shadow: 1px 2px 0 var(--link-shadow-color);
+}
+
+.link__p:hover {
+  border-block-end: 1px solid var(--link-text-color);
+}
+
+.link__p:focus {
+  outline: none;
+}
+
+.link__p:focus-visible {
+  outline: 1px solid var(--link-text-color);
+}
+
+@media (768px <= width < 1024px) {
+  .header {
+    padding: 20px;
+  }
+  .header__description__title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+  .header__theme-menu {
+    padding-top: 170px;
+    place-self: center end;
+  }
+  .header__theme-menu-list {
+    flex-direction: column;
+  }
+  .header__description {
+    padding: 173px 0px 183px 0px;
+    flex-direction: column;
+    display: flex;
+    gap: 162px;
+  }
+  .footer-title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+
+  .main__container__section:first-child {
+    grid-template-columns: 236px 1fr;
+  }
+
+  .main__container__section:nth-child(2) {
+    grid-template-columns: 1fr;
+  }
+
+  .main__container__section:nth-child(2) .section__title {
+    grid-column: span 1;
+  }
+
+  .main__container__section:nth-child(3) {
+    grid-template-columns: 236px 1fr;
+  }
+}
+
+@media (width < 768px) {
+  .header {
+    padding: 10px;
+  }
+  .header__theme-menu-list {
+    flex-direction: column;
+  }
+  .header__description {
+    padding: 65px 0px;
+    gap: 55px;
+  }
+  .header__description__title {
+    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+    margin-inline-start: 0;
+  }
+  .main__container__section:first-child {
+    row-gap: 20px;
+  }
+  .main__container__section:nth-child(2) {
+    row-gap: 20px;
+    width: 100%;
+  }
+
+  .main__container__section:first-child,
+  .main__container__section:nth-child(3) {
+    grid-template-columns: 1fr;
+  }
+
+  .main__container__section:nth-child(2) .main__section-title {
+    width: 100%;
+  }
+
+  .main__img__section {
+    gap: 10px;
+    display: flex;
+    flex-direction: column;
+  }
 }
