--- a/styles/style.css
+++ b/styles/style.css
@@ -321,11 +321,19 @@
 }
 
 @media (width < 768px) {
+  .header__theme-menu {
+    place-self: center end;
+    height: max-content;
+  }
   .header {
     padding: 10px;
   }
   .header__theme-menu-list {
+    display: flex;
     flex-direction: column;
+    align-items: flex-end;
+    padding-top: 50px;
+    gap: 10px;
   }
   .header__description {
     padding: 65px 0px;
@@ -339,7 +347,12 @@
     row-gap: 20px;
   }
   .main__container__section:nth-child(2) {
+    
     row-gap: 20px;
+    width: 100%;
+  }
+
+  .main__container__section:nth-child(2) .section__title {
     width: 100%;
   }
 
@@ -352,9 +365,27 @@
     width: 100%;
   }
 
+  .main__container__section:nth-child(2) {
+    grid-template-columns: 1fr;
+  }
+
+  .main__container__section:nth-child(2) .section__title {
+    grid-column: span 1;
+  }
+
   .main__img__section {
     gap: 10px;
     display: flex;
     flex-direction: column;
+  }
+
+  .decorated-zone::before {
+    top: 10px;
+    right: 10px;
+  }
+  
+  .decorated-zone::after {
+    bottom: 10px;
+    left: 10px;
   }
 }
