--- a/styles/style.css
+++ b/styles/style.css
@@ -190,6 +190,10 @@
   gap: 10px;
 }
 
+.section-header {
+  row-gap: 15px;
+}
+
 .section__text {
   font-size: var(--page-font-size);
   font-family: var(--page-font-family);
@@ -202,7 +206,6 @@
   display: grid;
   width: 100%;
   gap: 20px;
-  margin-top: -20px;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: auto auto auto auto;
   grid-template-areas:
@@ -318,14 +321,22 @@
 }
 
 @media (width < 768px) {
+  .header__theme-menu {
+    place-self: center end;
+    height: max-content;
+  }
   .header {
     padding: 10px;
   }
   .header__theme-menu-list {
+    display: flex;
     flex-direction: column;
+    align-items: flex-end;
+    padding-top: 55px;
+    gap: 10px;
   }
   .header__description {
-    padding: 65px 0px;
+    padding-top: 65px;
     gap: 55px;
   }
   .header__description__title {
@@ -336,8 +347,14 @@
     row-gap: 20px;
   }
   .main__container__section:nth-child(2) {
+    
     row-gap: 20px;
     width: 100%;
+  }
+
+  .main__container__section:nth-child(2) .section__title {
+    width: 100%;
+    grid-column: span 1;
   }
 
   .main__container__section:first-child,
@@ -349,9 +366,23 @@
     width: 100%;
   }
 
+  .main__container__section:nth-child(2) .section__title {
+    grid-column: span 1;
+  }
+
   .main__img__section {
     gap: 10px;
     display: flex;
     flex-direction: column;
+  }
+
+  .decorated-zone::before {
+    top: 10px;
+    right: 10px;
+  }
+  
+  .decorated-zone::after {
+    bottom: 10px;
+    left: 10px;
   }
 }
