--- a/styles/style.css
+++ b/styles/style.css
@@ -128,6 +128,7 @@
   background-color: var(--border-color);
   background-size: cover;
   font-size: var(--page-font-size);
+  line-height: 23.4px;;
   color: var(--description-color);
 }
 
@@ -354,10 +355,6 @@
   }
   .main__container__section:first-child {
     row-gap: 20px;
-  }
-
-  .section__content{
-    row-gap: 9px;
   }
 
   .main__container__section:nth-child(2) {
