--- a/styles/style.css
+++ b/styles/style.css
@@ -128,7 +128,7 @@
   background-color: var(--border-color);
   background-size: cover;
   font-size: var(--page-font-size);
-  line-height: 23.4px;;
+  line-height: 23.4px;
   color: var(--description-color);
 }
 
